Styling the '--highlight' channel label

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -916,7 +916,7 @@
 }
 
 .kiwi-statebrowser-channel-label--highlight {
-    background: #d62323;
+    background: #e45e5e;
 }
 
 .kiwi-statebrowser-channel-popup {
