Moving --kiwi-* theme vars back into the theme file #262

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -4,7 +4,10 @@
 
  */
 
-
+.kiwi-wrap {
+    --kiwi-nick-brightness: 40;
+    --kiwi-supports-monospace: 1;
+}
 
 
  /* Welcome Screen ( Welcome.vue ) */
