- Dark theme base colour is #000 - Default theme base colour is #fff - Preloader now has correct colour - Connected tab weird border issue (white pixels in corner) fixed - If user disables nick color, the nicks will display as either white (in dark theme) or black (in default theme) - UserVue 'Whois' box has been styled (finalllly!) - Network connection is nearly finished, need to complete the secure networks fix again - Alises block width has been increased to a max width of 750px

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -5,9 +5,10 @@
  */
 
 .kiwi-wrap {
-    background: #201F1F;
+    background: #fff;
     --kiwi-nick-brightness: 40;
     --kiwi-supports-monospace: 1;
+    color: #201F1F;
 }
 
  /* Welcome Screen ( Welcome.vue ) */
@@ -167,6 +168,15 @@
 /* Application settings ( AppSettings.vue ) */
 .kiwi-appsettings {
     background: #fff;
+}
+
+.kiwi-appsettings .app-settings-block {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.kiwi-appsettings .app-settings-block h3 {
+    background: #42b992;
+    color: #fff;
 }
 
 .kiwi-appsettings .title {
@@ -985,9 +995,8 @@
 }
 
 .kiwi-userbox-whois {
-    background: #fff;
-    color: #2c3e50;
-    border: 1px dashed #9e9e9e;
+    border: 1px solid #9e9e9e;
+    border-radius: 2px;
 }
 
 
