--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -6,13 +6,15 @@
 
 .kiwi-wrap {
     background: #201F1F;
+    color: #dedede;
     --kiwi-nick-brightness: 40;
     --kiwi-supports-monospace: 1;
 }
 
  /* Welcome Screen ( Welcome.vue ) */
  .kiwi-welcome-simple-form {
-     background-color: #fff;
+     background-color: #dedede;
+     color: #000;
      border: 1px solid #ececec;
  }
 
@@ -22,7 +24,7 @@
 
  .kiwi-welcome-simple-form .u-submit {
      background-color: #42b992;
-     color: #fff;
+     color: #dedede;
  }
 
  .kiwi-welcome-simple .help {
@@ -63,7 +65,7 @@
 .u-tabbed-view-tabs .u-tabbed-view-tab {
     border-bottom: 3px solid rgba(255, 255, 255, 0.1);
     background: #2c2c2c;
-    color: #fff;
+    color: #dedede;
 }
 
 .u-tabbed-view-tabs .u-tabbed-view-tab:hover,
@@ -73,7 +75,7 @@
 
 /*Style all inputs */
 .input-text {
-    background: #fff;
+    background: #dedede;
 }
 
 .input-text-label {
@@ -120,7 +122,7 @@
 
 .u-form input[type='checkbox'] {
     border: 2px solid #000;
-    background-color: #fff;
+    background-color: #dedede;
 }
 
 .u-form input[type='checkbox']:after {
@@ -136,7 +138,7 @@
 .u-form label input[type='email'],
 .u-form textarea {
     color: #000;
-    background: #fff;
+    background: #dedede;
     border: 1px solid #42b992;
 }
 
@@ -154,7 +156,7 @@
     background-color: #42b992;
     border: none;
     border-bottom: 1px solid #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .u-button-secondary {
@@ -165,7 +167,7 @@
 .u-button-warning {
     background-color: #ca3c3c;
     border-bottom: 1px solid #5f1515;
-    color: #fff4f4;
+    color: #dedede4f4;
 }
 
 
@@ -176,15 +178,21 @@
 
 .kiwi-appsettings .app-settings-block {
     background-color: #272626;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.kiwi-appsettings .app-settings-block h3 {
+    background: #42b992;
+    color: #dedede;
 }
 
 .kiwi-appsettings .u-form label span {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-appsettings .title {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-appsettings .title:hover{
@@ -231,7 +239,7 @@
 
 .kiwi-header-join-channel-button {
     background-color: #42b983;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-container-toggledraw-statebrowser,
@@ -271,43 +279,43 @@
 /* Sidebar uservue colouring */
 .kiwi-userbox,
 .kiwi-userbox-usermask {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-userbox .kiwi-userbox-actions {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-userbox .kiwi-userbox-actions .u-button {
-    border-color: #fff;
-    color: #fff;
+    border-color: #dedede;
+    color: #dedede;
     transition: all 0.3s;
 }
 
 .kiwi-userbox .kiwi-userbox-actions .u-button:hover {
-    color: #fff;
+    color: #dedede;
 }
 
 .u-form.kiwi-ignore-user-form {
-    color: #fff;
+    color: #dedede;
 }
 
 /* Container Header ( ContainerHeader.vue ) */
 .kiwi-header {
     background: #1e1e1e;
-    color: #fff;
+    color: #dedede;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .kiwi-header .kiwi-header-topic {
     border-top: 2px solid #42b992;
     border-bottom: 1px solid #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header .kiwi-header-topic  .topic-title{
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header .kiwi-header-buffersettings {
@@ -315,16 +323,16 @@
 }
 
 .kiwi-header .kiwi-header-topic .content {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header .kiwi-header-topic:hover .view-topic {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header-name {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header-buffersettings {
@@ -339,7 +347,7 @@
 .kiwi-header .kiwi-header-options .option a:hover,
 .kiwi-header .kiwi-header.options .option a.active {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
     opacity: 1;
 }
 
@@ -350,7 +358,7 @@
 .kiwi-header-options .option.topic.active,
 .kiwi-header-options .option.leave a:hover {
     background-color: #d16c6c;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-channel-settings,
@@ -364,7 +372,7 @@
 
 .kiwi-header .kiwi-header-notjoined .u-link {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header .kiwi-header-notjoined .u-link:hover {
@@ -374,7 +382,7 @@
 /* The not joined button */
 .kiwi-header .kiwi-header-notjoined .u-link {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header .kiwi-header-notjoined .u-link:hover {
@@ -382,18 +390,18 @@
 }
 
 .kiwi-header-name {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-header-server-connection .u-button {
     background: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 /* Control Input - displayed at bottom of Kiwi ( ControlInput.vue ) */
 .kiwi-controlinput {
     background: #151515;
-    color: #fff !important;
+    color: #dedede !important;
 }
 
 .kiwi-controlinput .kiwi-controlinput-user,
@@ -412,6 +420,10 @@
     background: transparent;
 }
 
+.kiwi-messagelist-seperator {
+    color: #000;
+}
+
 .kiwi-messagelist-message-action .kiwi-messagelist-body {
     color: #090;
     font-style: italic;
@@ -420,23 +432,23 @@
 /*Container Header */
 .control-input {
     background: #1e1e1e;
-    color: #fff;
+    color: #dedede;
 }
 
 /*When hovering over a users messages */
 .kiwi-messagelist-message--hover{
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-messagelist-message--modern .kiwi-messagelist-body {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-messagelist-message--hover a,
 .kiwi-messagelist-message--hover .kiwi-messagelist-time ,
 .kiwi-messagelist-message--hover .kiwi-messagelist-nick{
-    color: #fff !important;
+    color: #dedede !important;
 }
 
 .kiwi-container--sidebar-open .kiwi-messagelist::after {
@@ -444,18 +456,18 @@
 }
 
 .kiwi-messagelist-message-connection {
-    background-color: #fff;
+    background-color: #dedede;
     border-bottom: 1px solid #c0c0c0;
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message-connection .kiwi-messagelist-body {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message-disconnected .kiwi-messagelist-body {
     background-color: #b9424a;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-messagelist-message--unread {
@@ -478,7 +490,7 @@
 .kiwi-nicklist .user-count,
 .kiwi-sidebar h3,
 .kiwi-channelbanlist-table {
-    color: #fff;
+    color: #dedede;
 }
 
 
@@ -488,14 +500,14 @@
 }
 
 .kiwi-channelbanlist-table-actions:hover i {
-    color: #fff;
+    color: #dedede;
 }
 
 /* Topic Styling */
 .kiwi-messagelist-message-topic {
     background: rgba(0,0,0,0.02);
     border: 2px solid #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-messagelist-message-traffic-join {
@@ -543,20 +555,20 @@
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings .kiwi-title {
     background: #42b992;
-    color: #fff;
+    color: #dedede;
     border-top: 1px solid #42b992;
 }
 
 .kiwi-networksettings .kiwi-title span {
     color: #42b992;
-    background: #fff;
+    background: #dedede;
 }
 
 .kiwi-networksettings input[type='text'],
 .kiwi-networksettings input[type='password'],
 .kiwi-networksettings input[type='email'],
 .kiwi-networksettings textarea,
-.input-text input {
+.kiwi-networksettings .input-text input {
     border-bottom: 1px solid #42b992;
     background: #dadada;
     color: #000;
@@ -566,8 +578,18 @@
     color: #42b992;
 }
 
-.kiwi-networksettings .u-form{
-    background: #fff;
+.kiwi-networksettings .u-form {
+    background: rgb(62, 62, 62);
+    color: #dedede;
+}
+
+.kiwi-networksettings .u-form .input-text {
+    background: none;
+}
+
+.kiwi-networksettings .u-form span {
+    background: none;
+    color: #dedede;
 }
 
 .kiwi-networksettings-error {
@@ -576,7 +598,7 @@
 
 .kiwi-networksettings-danger .u-button-warning {
     background-color: #d16c6c;
-    color: #fff;
+    color: #dedede;
 }
 
 /* Nicklist ( Nicklist.vu ) */
@@ -589,7 +611,7 @@
 }
 
 .kiwi-nicklist-info input {
-    background-color: #fff;
+    background-color: #dedede;
     border-top: 2px solid #42b992;
     color: #000;
     font-weight: normal;
@@ -610,21 +632,21 @@
 
 .kiwi-nicklist-users .kiwi-nicklist-user:hover {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-nicklist-users .kiwi-nicklist-user:hover {
     background-color: #42b992;
     cursor: pointer;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-nicklist-users .kiwi-nicklist-user:hover .kiwi-nicklist-user-nick {
-    color: #fff !important;
+    color: #dedede !important;
 }
 
 .kiwi-nicklist-users .kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-nicklist-info i.fa-search {
@@ -634,17 +656,17 @@
 
 /* Not connected message ( NotConnected.vue ) */
 .kiwi-notconnected {
-    color: #fff;
+    color: #dedede;
     background-color: #bf5155;
 }
 
 .button-container .button {
-    border: 2px solid #fff;
-    color: #fff;
+    border: 2px solid #dedede;
+    color: #dedede;
 }
 
 .button-container .button:hover{
-    background-color: #fff;
+    background-color: #dedede;
     color: #000;
 }
 
@@ -674,13 +696,13 @@
 
 .kiwi-settings-aliases-help em {
     color: #ab1010;
-    background: #fff6a5;
+    background: #dedede6a5;
 }
 
 /* Sidebar ( Sidebar.vue ) */
 .kiwi-sidebar-options {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-sidebar-options:hover {
@@ -691,18 +713,18 @@
 /* Statebrowser - Left sidebar ( StateBrowser.vue ) */
 .kiwi-statebrowser {
     background: #22231f;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser .user-avatar {
     border: 2px solid #42b992;
     background-color: #000;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser .user-avatar:hover {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-scrollarea {
@@ -716,7 +738,7 @@
 
 .kiwi-statebrowser.user_profile_open .user-avatar {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 /* User Settings */
@@ -726,7 +748,7 @@
 
 .kiwi-statebrowser .user-options:hover {
     background: #42b992;
-    color: #fff;
+    color: #dedede;
     opacity: 1;
 }
 
@@ -739,7 +761,7 @@
 .kiwi-network-name-options .option-button:hover,
 .kiwi-network-name-options .option-button.active {
     background-color: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-network-name-options .kiwi--collapse {
@@ -752,17 +774,17 @@
 
 /* Add channel input */
 .kiwi-statebrowser-newchannel-inputwrap {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-newchannel-inputwrap input[type='text'] {
     color: #000;
-    background: #fff;
+    background: #dedede;
 }
 
 .kiwi-statebrowser-newchannel-inputwrap--focus {
     opacity: 1;
-    background-color: #fff;
+    background-color: #dedede;
 }
 
 /* Set the height of the networks scroll box */
@@ -781,7 +803,7 @@
 }
 
 .kiwi-statebrowser-channelfilter input {
-    background-color: #fff;
+    background-color: #dedede;
     color: #000;
 }
 
@@ -798,7 +820,7 @@
 }
 
 .kiwi-statebrowser-newnetwork a {
-    color: #fff;
+    color: #dedede;
     border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
@@ -806,7 +828,7 @@
     background: #42b992;
     border-color: #42b992;
     opacity: 1;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-network .kiwi-statebrowser-network-header {
@@ -814,7 +836,7 @@
 }
 
 .kiwi-statebrowser-network .kiwi-statebrowser-network-header a {
-    color: #fff;
+    color: #dedede;
 }
 
 /* Active Network Styling */
@@ -825,11 +847,11 @@
 /* Channel Styling */
 .kiwi-statebrowser-channels  .kiwi-statebrowser-channel {
     border-bottom: 1px solid #4a4b47;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-channels  .kiwi-statebrowser-channel .kiwi-statebrowser-channel-name {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-channels  .kiwi-statebrowser-channel .kiwi-statebrowser-channel-name  .kiwi-statebrowser-channel-label {
@@ -853,12 +875,12 @@
 .kiwi-statebrowser-newchannel a:hover {
     background: #42b992;
     opacity: 1;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-usermenu-body .close-icon {
     background-color: #fc6262;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-usermenu-body .close-icon:hover {
@@ -908,7 +930,7 @@
 
 .kiwi-statebrowser-channel-label {
     background: #42b992;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-channel-label--highlight {
@@ -927,7 +949,7 @@
 
 .kiwi-statebrowser-usermenu-body .close-icon {
     background-color: #fc6262;
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-statebrowser-usermenu-body .close-icon:hover {
@@ -1023,7 +1045,7 @@
 .kiwi-userbox-actions-op .kick ,
 .kiwi-userbox-actions-op .ban,
 .kiwi-userbox-actions-op .kickban {
-    color: #fff;
+    color: #dedede;
 }
 
 .kiwi-userbox-actions-op .kick {
@@ -1051,9 +1073,8 @@
 }
 
 .kiwi-userbox-whois {
-    background: #fff;
-    color: #2c3e50;
-    border: 1px dashed #9e9e9e;
+    border: 1px solid #9e9e9e;
+    border-radius: 2px;
 }
 
 
