AppSettings CSS cleanup

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -176,12 +176,12 @@
     background: #1e1e1e;
 }
 
-.kiwi-appsettings .app-settings-block {
+.kiwi-appsettings-block {
     background-color: #272626;
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.kiwi-appsettings .app-settings-block h3 {
+.kiwi-appsettings-block h3 {
     background: #42b992;
     color: #dedede;
 }
@@ -190,12 +190,12 @@
     color: #dedede;
 }
 
-.kiwi-appsettings .title {
+.kiwi-appsettings-title {
     background-color: #42b992;
     color: #dedede;
 }
 
-.kiwi-appsettings .title:hover{
+.kiwi-appsettings-title:hover{
     background: #d16c6c;
 }
 
