--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -279,28 +279,18 @@
     background: #fff;
 }
 
-.kiwi-header .kiwi-header-topic {
+.kiwi-header-topic {
     border-top: 2px solid #42b992;
     border-bottom: 1px solid #42b992;
     color: #5f5f5f;
 }
 
-.kiwi-header .kiwi-header-topic  .topic-title{
-    background-color: #42b992;
-    color: #fff;
-}
-
-.kiwi-header .kiwi-header-buffersettings {
+.kiwi-header-buffersettings {
     border-top: 1px solid #ddd;
 }
 
-.kiwi-header .kiwi-header-topic .content {
+.kiwi-header-topic > div {
     color: #22231f;
-}
-
-.kiwi-header .kiwi-header-topic:hover .view-topic {
-    background-color: #42b992;
-    color: #fff;
 }
 
 .kiwi-header-name {
@@ -311,23 +301,19 @@
     border-top: 1px solid #ddd;
 }
 
-.kiwi-header-options .option {
-    border-left: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.kiwi-header .kiwi-header-options .option a:hover,
-.kiwi-header .kiwi-header.options .option a.active {
+.kiwi-header-option a:hover,
+.kiwi-header-option--active a {
     background-color: #42b992;
     color: #fff;
     opacity: 1;
 }
 
 .kiwi-statebrowser-network .kiwi-statebrowser-network-header a.kiwi-statebrowser-network-toggle:hover {
-        background-color: #d16c6c;
+    background-color: #d16c6c;
 }
 
-.kiwi-header-options .option.topic.active,
-.kiwi-header-options .option.leave a:hover {
+.kiwi-header-option-topic.kiwi-header-option--active,
+.kiwi-header-option-leave a:hover {
     background-color: #d16c6c;
     color: #fff;
 }
