NickList.vue CSS cleanup

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -465,7 +465,7 @@
 }
 
 .kiwi-sidebar .u-form label span,
-.kiwi-nicklist .user-count,
+.kiwi-nicklist-usercount,
 .kiwi-sidebar h3,
 .kiwi-channelbanlist-table {
     color: #dedede;
@@ -580,50 +580,49 @@
 }
 
 /* Nicklist ( Nicklist.vu ) */
-.kiwi-nicklist .user-count {
+.kiwi-nicklist-usercount {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.kiwi-nicklist .kiwi-nicklist-info{
+.kiwi-nicklist-info {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .kiwi-nicklist-info input {
     background-color: #dedede;
-    border-top: 2px solid #42b992;
     color: #000;
     font-weight: normal;
     border-left: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user {
+.kiwi-nicklist-user {
     border-top: 1px solid #858585;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:first-of-type {
+.kiwi-nicklist-user:first-of-type {
     border-top: none;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:after {
+.kiwi-nicklist-user:after {
     color: #666764;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:hover {
+.kiwi-nicklist-user:hover {
     background-color: #42b992;
     color: #dedede;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:hover {
+.kiwi-nicklist-user:hover {
     background-color: #42b992;
     cursor: pointer;
     color: #dedede;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:hover .kiwi-nicklist-user-nick {
+.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick {
     color: #dedede !important;
 }
 
-.kiwi-nicklist-users .kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
+.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
     color: #dedede;
 }
 
