--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -999,7 +999,7 @@
     color: #9e9e9e;
 }
 
-.kiwi-userbox-actions-op {
+.kiwi-userbox-opactions {
     border-top: 1px solid #9e9e9e;
 }
 
@@ -1012,41 +1012,41 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.kiwi-userbox-actions-op {
+.kiwi-userbox-opactions {
     border-top: 1px solid #9e9e9e;
 }
 
-.kiwi-userbox-actions-op label select {
+.kiwi-userbox-opactions label select {
     border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.kiwi-userbox-actions-op .kick ,
-.kiwi-userbox-actions-op .ban,
-.kiwi-userbox-actions-op .kickban {
+.kiwi-userbox-opaction-kick ,
+.kiwi-userbox-opaction-ban,
+.kiwi-userbox-opaction-kickban {
     color: #dedede;
 }
 
-.kiwi-userbox-actions-op .kick {
+.kiwi-userbox-opaction-kick {
     background-color: #f6c358;
 }
 
-.kiwi-userbox-actions-op .kick:hover {
+.kiwi-userbox-opaction-kick:hover {
     background-color: #fcce6e;
 }
 
-.kiwi-userbox-actions-op .ban {
+.kiwi-userbox-opaction-ban {
     background-color: #fcb46e;
 }
 
-.kiwi-userbox-actions-op .ban:hover{
+.kiwi-userbox-opaction-ban:hover{
     background-color: #ffca97;
 }
 
-.kiwi-userbox-actions-op .kickban{
+.kiwi-userbox-opaction-kickban{
     background-color: #fb846a;
 }
 
-.kiwi-userbox-actions-op .kickban:hover{
+.kiwi-userbox-opaction-kickban:hover{
     background-color: #ffaf9e;
 }
 
