--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -387,6 +387,18 @@
     border: 1px solid #ddd;
 }
 
+.kiwi-messagelist {
+    background: #fff;
+}
+
+.kiwi-messagelist-message--info-open {
+    background: #f6f6f6;
+}
+
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #ddd;
+}
+
 .kiwi-messagelist-message.kiwi-messagelist-message--unread {
     border-left-color: rgba(255, 255, 255, 0.1);
     background-color: rgba(255, 255, 255, 0.1);
@@ -404,6 +416,11 @@
 .kiwi-messagelist-message-action .kiwi-messagelist-body {
     color: #44f944;
     font-style: italic;
+}
+
+.kiwi-container-empty .u-button {
+    background-color: #42b992;
+    color: #fff;
 }
 
 /*Container Header */
@@ -496,6 +513,11 @@
     color: #fb5151;
 }
 
+.kiwi-messagelist-seperator::after {
+    border-color: #ddd;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
 /* Errors */
 .kiwi-messagelist-message-error {
     background: #f1d4d4;
@@ -523,6 +545,17 @@
     color: #a0a09f;
 }
 
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection-connected {
+    background: #42b992;
+}
+
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-privmsg:hover,
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-action:hover,
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover, {
+    cursor: pointer;
+    border-left-color: #80ab52;
+}
+
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings .kiwi-title {
     background: #42b992;
@@ -530,9 +563,17 @@
     border-top: 1px solid #42b992;
 }
 
+.kiwi-networksettings .kiwi-padded-form-element-container.kiwi-dangerzone {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
 .kiwi-networksettings .kiwi-title span {
     color: #42b992;
     background: #dedede;
+}
+
+.kiwi-networksettings .u-form {
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .kiwi-networksettings input[type='text'],
@@ -570,6 +611,38 @@
 .kiwi-networksettings-danger .u-button-warning {
     background-color: #d16c6c;
     color: #dedede;
+}
+
+.kiwi-networksettings .kiwi-customserver-tls {
+    color: #bfbfbf;
+}
+
+.kiwi-networksettings .kiwi-connect-to-newnetwork {
+    background: #42b992;
+    color: #fff;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls--enabled {
+    color: green;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls--enabled .kiwi-customserver-tls-lock {
+    color: green;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls-minus {
+    color: red;
+}
+
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button {
+    border: 1px solid #42b992;
+    color: #42b992;
+}
+
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button:hover,
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button.kiwi-networksettings-server-type-active {
+    background: #42b992;
+    color: #fff;
 }
 
 /* Nicklist ( Nicklist.vu ) */
@@ -619,10 +692,13 @@
     color: #dedede;
 }
 
+.kiwi-nicklist-messageuser {
+    color: #666764;
+}
+
 .kiwi-nicklist-info i.fa-search {
     color: #cfcfcf;
 }
-
 
 /* Not connected message ( NotConnected.vue ) */
 .kiwi-notconnected {
@@ -687,6 +763,16 @@
     color: #dedede;
 }
 
+.kiwi-statebrowser-divider {
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.kiwi-messageinfo {
+    background: #f6f6f6;
+    border-bottom: 2px #ddd solid;
+    border-top: 1px #ddd dashed;
+}
+
 .kiwi-statebrowser-usermenu-avatar {
     border: 2px solid #42b992;
     background-color: #000;
@@ -729,6 +815,10 @@
     border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+.kiwi-network-name-options {
+    background-color: #131312;
+}
+
 .kiwi-network-name-options .option-button:hover,
 .kiwi-network-name-options .option-button.active {
     background-color: #42b992;
@@ -767,6 +857,7 @@
 .kiwi-statebrowser-channelfilter {
     transition: all 0.3s;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: #131312;
 }
 
 .kiwi-statebrowser-channelfilter::after {
@@ -996,6 +1087,9 @@
     border-top: 1px solid #9e9e9e;
 }
 
+.kiwi-userbox-opactions label select {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
 
 .kiwi-userbox .main-title {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
@@ -1047,3 +1141,18 @@
     border: 1px solid #9e9e9e;
     border-radius: 2px;
 }
+
+.kiwi-messagelist-message-whois {
+    border-left-color: #939393;
+}
+
+.kiwi-messagelist-message.kiwi-messagelist-message--hover {
+    position: relative;
+    border-color: #42b992;
+}
+
+/* MOTD */
+.kiwi-messagelist-message-motd {
+    color: #666;
+}
+
