--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -267,6 +267,11 @@
     border-right-color: #d62323;
 }
 
+.kiwi-container-empty .u-button {
+    background-color: #42b992;
+    color: #fff;
+}
+
 /* Container Header ( ContainerHeader.vue ) */
 .kiwi-header {
     background: #fff;
@@ -366,6 +371,18 @@
 }
 
 /* Message list - Standard messages ( MessageList.vue ) */
+.kiwi-messagelist {
+    background: #fff;
+}
+
+.kiwi-messagelist-message--info-open {
+    background: #f6f6f6;
+}
+
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #ddd;
+}
+
 .kiwi-messagelist-message-action .kiwi-messagelist-body {
     color: #090;
     font-style: italic;
@@ -412,6 +429,12 @@
     color: #000 !important;
 }
 
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-privmsg:hover,
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-action:hover,
+.kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover, {
+    border-left-color: #80ab52;
+}
+
 /* Style the banlist */
 .kiwi-channelbanlist-table-actions:hover {
     background-color: #b9424a;
@@ -442,6 +465,11 @@
     color: #900;
 }
 
+.kiwi-messagelist-seperator::after {
+    border-color: #ddd;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
 /* Errors */
 .kiwi-messagelist-message-error {
     background: #f1d4d4;
@@ -469,11 +497,23 @@
     color: #a0a09f;
 }
 
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-connection-connected {
+    background: #42b992;
+}
+
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings .kiwi-title {
     background: #42b992;
     color: #fff;
     border-top: 1px solid #42b992;
+}
+
+.kiwi-networksettings .kiwi-padded-form-element-container.kiwi-dangerzone {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.kiwi-networksettings .u-form {
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .kiwi-networksettings .kiwi-title span {
@@ -493,8 +533,16 @@
     color: #42b992;
 }
 
+.kiwi-networksettings .kiwi-customserver-tls {
+    color: #bfbfbf;
+}
+
 .kiwi-networksettings .u-form{
     background: #fff;
+}
+
+.kiwi-networksettings .kiwi-customserver-tls {
+    color: #bfbfbf;
 }
 
 .kiwi-networksettings-error {
@@ -503,6 +551,34 @@
 
 .kiwi-networksettings-danger .u-button-warning {
     background-color: #d16c6c;
+    color: #fff;
+}
+
+.kiwi-networksettings .kiwi-connect-to-newnetwork {
+    background: #42b992;
+    color: #fff;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls--enabled {
+    color: green;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls--enabled .kiwi-customserver-tls-lock {
+    color: green;
+}
+
+.kiwi-networksettings  .kiwi-customserver-tls-minus {
+    color: red;
+}
+
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button {
+    border: 1px solid #42b992;
+    color: #42b992;
+}
+
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button:hover,
+.kiwi-networksettings .kiwi-networksettings-server-types .kiwi-network-type-button.kiwi-networksettings-server-type-active {
+    background: #42b992;
     color: #fff;
 }
 
@@ -550,6 +626,10 @@
 
 .kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
     color: #fff;
+}
+
+.kiwi-nicklist-messageuser {
+    color: #666764;
 }
 
 .kiwi-nicklist-info i.fa-search {
@@ -619,6 +699,16 @@
     color: #fff;
 }
 
+.kiwi-statebrowser-divider {
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.kiwi-messageinfo {
+    background: #f6f6f6;
+    border-bottom: 2px #ddd solid;
+    border-top: 1px #ddd dashed;
+}
+
 .kiwi-statebrowser-usermenu-avatar {
     border: 2px solid #42b992;
     background-color: #000;
@@ -661,6 +751,10 @@
     border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+.kiwi-network-name-options {
+    background-color: #131312;
+}
+
 .kiwi-network-name-options .option-button:hover,
 .kiwi-network-name-options .option-button.active {
     background-color: #42b992;
@@ -699,6 +793,7 @@
 .kiwi-statebrowser-channelfilter {
     transition: all 0.3s;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: #131312;
 }
 
 .kiwi-statebrowser-channelfilter::after {
@@ -928,7 +1023,6 @@
     border-top: 1px solid #9e9e9e;
 }
 
-
 .kiwi-userbox .main-title {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -989,3 +1083,18 @@
     border: 1px solid #9e9e9e;
     border-radius: 2px;
 }
+
+.kiwi-messagelist-message-whois {
+    border-left-color: #939393;
+}
+
+.kiwi-messagelist-message.kiwi-messagelist-message--hover {
+    position: relative;
+    border-color: #42b992;
+}
+
+/* MOTD */
+.kiwi-messagelist-message-motd {
+    color: #666;
+}
+
