--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -299,6 +299,10 @@
     border-top: 1px solid #ddd;
 }
 
+.kiwi-header-option {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+
 .kiwi-header-option a:hover,
 .kiwi-header-option--active a {
     background-color: #42b992;
