--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -584,6 +584,10 @@
     border-top: 1px solid #42b992;
 }
 
+.kiwi-network-nicknamelabel {
+    color: rgb(128, 128, 128);
+}
+
 .kiwi-networksettings .kiwi-padded-form-element-container.kiwi-dangerzone {
     border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
