--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -273,6 +273,10 @@
     color: #5f5f5f;
 }
 
+.kiwi-messagelist-message.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic.kiwi-messagelist-message--unread {
+    border-left: 2px solid #42b992;
+}
+
 .kiwi-header-buffersettings {
     border-top: 1px solid #ddd;
 }
@@ -417,7 +421,7 @@
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message--unread,
-.kiwi-messagelist-message.kiwi-messagelist-message.kiwi-messagelist-message--unread.kiwi-messagelist-message--unread {
+.kiwi-messagelist-message.kiwi-messagelist-message.kiwi-messagelist-message--unread {
   border-left: 5px solid #42b992;
   background: #f2f2f2;
   opacity: 1;
