--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -435,6 +435,10 @@
     font-style: italic;
 }
 
+.kiwi-messagelist-body a {
+    color: #63bafb;
+}
+
 .kiwi-container-empty .u-button {
     background-color: #42b992;
     color: #fff;
