- The messages in scroll box has been neated up massively - The change user nick secondary button is now coloured on the dark theme - The change user input  text has got a margin on the bottom of it

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -756,6 +756,11 @@
     border-top: 1px solid #ddd;
 }
 
+.kiwi-selfuser-actions .u-button-secondary {
+  background-color: #b9424a;
+  color: #dedede;
+}
+
 /* Settings Aliases ( SettingsAliases.vue ) */
 .kiwi-settings-aliases-input {
     border-color: #ccc;
