--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -581,6 +581,10 @@
     color: #fff;
 }
 
+.kiwi-channellist-refresh.u-button-secondary {
+  background: #42b992;
+}
+
 /* Nicklist ( Nicklist.vu ) */
 .kiwi-nicklist-usercount {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
