- Tidying up the compact view - Removing hover animations from the --hover state for messages - General tighening up of the messages

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1199,6 +1199,7 @@
 
 .kiwi-messagelist-message.kiwi-messagelist-message--hover {
     position: relative;
+    opacity: 1;
     border-color: #42b992;
 }
 
