--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -456,18 +456,11 @@
 
 /*When hovering over a users messages */
 .kiwi-messagelist-message--hover{
-    background-color: #42b992;
-    color: #dedede;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .kiwi-messagelist-message--modern .kiwi-messagelist-body {
     color: #dedede;
-}
-
-.kiwi-messagelist-message--hover a,
-.kiwi-messagelist-message--hover .kiwi-messagelist-time ,
-.kiwi-messagelist-message--hover .kiwi-messagelist-nick{
-    color: #dedede !important;
 }
 
 .kiwi-container--sidebar-open .kiwi-messagelist::after {
