- Removed the 'outline' property when users had the channel filter in focus

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -896,6 +896,7 @@
 .kiwi-statebrowser-channelfilter input {
     background-color: #dedede;
     color: #000;
+    outline: none;
 }
 
 .kiwi-statebrowser-channelfilter p {
