--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -504,6 +504,10 @@
     color: #a0a09f;
 }
 
+.kiwi-messagelist-message--modern {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings .kiwi-title {
     background: #42b992;
